--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<nav class="relative w-full flex flex-wrap items-center justify-between py-4 bg-gray-100 text-gray-500 hover:text-gray-700 focus:text-gray-700 shadow-lg">
+    <div class="container-fluid w-full flex flex-wrap items-center justify-between px-6">
+      <div class="container-fluid">
+            italy map
+      </div>
+    </div>
+  </nav>
 <router-outlet></router-outlet>
+
+<footer class="bg-gray-200 text-center lg:text-left">
+  </footer>
